Fullscreen sprite editor on tablet tutorial, CSS fixes (#8525)

--- a/theme/tutorial-sidebar.less
+++ b/theme/tutorial-sidebar.less
@@ -8,6 +8,8 @@
 @tutorialTabletButtonColor: #f3f3f3;
 @tutorialTabletStepCounterWidth: 16rem;
 
+@tutorialHintMaskZIndex: -1; // Below tutorial pane
+
 /*******************************
         Tutorial Tab
 *******************************/
@@ -217,6 +219,7 @@
     left: 0;
     bottom: 0;
     right: 0;
+    z-index: @tutorialHintMaskZIndex;
 }
 
 /*******************************
@@ -280,8 +283,8 @@
 }
 
 // Mini sim is visible when tab is hidden
-#root:not(.fullscreensim) {
-    .tab-simulator.tab-content.hidden {
+#root {
+    &:not(.fullscreensim) .tab-simulator.tab-content.hidden {
         height: 0;
         padding: 0;
 
@@ -297,7 +300,7 @@
     }
     .tab-simulator.tab-content:not(.hidden) {
         .simPanel {
-            .sidebar-button { display: none !important; }
+            .sidebar-button, .hidefullscreen { display: none !important; }
         }
     }
 }
@@ -520,7 +523,7 @@
     /*******************************
             Simulator Tab
     *******************************/
-    #root.tabTutorial .tab-simulator:not(.hidden) {
+    #root.tabTutorial:not(.fullscreensim) .tab-simulator:not(.hidden) {
         .simPanel {
             display: flex;
 
@@ -596,7 +599,7 @@
 
 /* Mobile */
 @media only screen and (max-width: @largestMobileScreen) {
-    #root.tabTutorial .tab-simulator:not(.hidden) .simPanel {
+    #root.tabTutorial:not(.fullscreensim) .tab-simulator:not(.hidden) .simPanel {
         #simulators {
             width: 16rem;
         }
